# healthgpt

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  problems.md  pyproject.toml
.github/workflows/: verify.yml
ops/jwt-minter/: README.md  jwt-minter.py  keypair.jwk
src/: api.py  health_check.py  search.py
src/integrations/: mastodon.py  openai.py
src/model/: config.py  search_results.py  timeline.py
src/util/: JwtBearerTokenAuthorizer.py  common.py  public.jwk
tests/: conftest.py  health_check_test.py  mastodon_test.py  openai_test.py  search_test.py
